--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>About Me</h1>
-      <div id="profilepic">
+      <aside id="profilepic">
         <img src="assets/images/profile.jpg" class="auth-image" alt="Matthew">
-      </div>
+      </aside>
       <p>Hi, I'm Matthew Tai and I am a professional chef.</p>
 
       <p>I started working in the industry since 2013 and I currently work at the Sheraton in downtown Toronto. I am very honoured
@@ -42,8 +42,8 @@
         2018 qualifiers and we came second. We will be going to Lyon, France in 2019 to compete in the finals against 23
         other countries.</p>
 
-      <p>Always fascinated by the world of technology and being a technophile myself, I decided to enroll in the University of
-        Toronto SCS Full-Stack Web Developer Boot Camp. I am looking for a new challenge, to broaden my horizons, to gain
+      <p>Always fascinated by the world of technology and being a technophile myself, I decided to enroll in the University
+        of Toronto SCS Full-Stack Web Developer Boot Camp. I am looking for a new challenge, to broaden my horizons, to gain
         a new skill set, and hopefully transition into the industry one day!</p>
 
       <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/BhfHP8LhTun/"
