--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>About Me</h1>
-      <aside id="profilepic">
+      <div id="profilepic">
         <img src="assets/images/profile.jpg" class="auth-image" alt="Matthew">
-      </aside>
+      </div>
       <p>Hi, I'm Matthew Tai and I am a professional chef.</p>
 
-      <p>I started working in the industry since 2013 and I currently work at the Sheraton in downtown Toronto. I am very honoured
+      <p>I've started working in the industry since 2013 and I currently work at the Sheraton in downtown Toronto. I am very honoured
         to be a part of
         <a href="http://www.bocusedorcanada.ca/">Bocuse d'Or Canada</a> since late 2015. In order to better assist my team, I started designing stencils/moulds and
         recently expanded my services. My current clients include the
