--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,9 @@
 
 <body>
 
-  <header id="masthead">
+  <header id="header">
     <div class="container">
-      <a href="index.html" id=logo>
-        <img border="0" alt="Matthew" src="assets/images/logo.png" width="100" height="100">
+      <a href="index.html" id=logo>Matthew Tai</a>
         <nav>
 
           <a href="index.html">About</a>
